Add (empty) AUTHORS required by automake, Fix spec file
(Old svn revision: 3259)

--- a/xfce4.spec.in
+++ b/xfce4.spec.in
@@ -58,9 +58,9 @@ rm -rf $RPM_BUILD_ROOT
 
 %files themes
 %defattr(-, root, root)
-%{_datadir}/xfce4/themes/Gnome
+%{_datadir}/xfce4/themes/
 
 %files plugins
 %defattr(-, root, root)
-%{_datadir}/xfce4/plugins/mailcheck
+%{_datadir}/xfce4/plugins/
 
