Add support for themeable minibuttons and increased the maximum number of groups to 16
(Old svn revision: 3292)

--- a/themes/Gnome/Makefile.am
+++ b/themes/Gnome/Makefile.am
@@ -5,6 +5,10 @@ file1.png \
 file2.png \
 games.png \
 man.png \
+miniinfo.png \
+minilock.png \
+minipalet.png \
+minipower.png \
 multimedia.png \
 network.png \
 paint.png \
