Add info panel by Xavier Maillard
(Old svn revision: 3296)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,11 @@
 @SET_MAKE@
 
+pkginfodir=$(pkgdatadir)
+
+pkginfo_DATA = AUTHORS COPYING ChangeLog
+
 noinst_DATA = example.xfce4rc
+
 
 EXTRA_DIST = example.xfce4rc.in xfce4.spec xfce4.spec.in README.xml
 
