--- a/Makefile.in
+++ b/Makefile.in
@@ -91,6 +91,10 @@ am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
 
+pkginfodir = $(pkgdatadir)
+
+pkginfo_DATA = AUTHORS COPYING ChangeLog
+
 noinst_DATA = example.xfce4rc
 
 EXTRA_DIST = example.xfce4rc.in xfce4.spec xfce4.spec.in README.xml
@@ -102,7 +106,7 @@ mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
 CONFIG_CLEAN_FILES = xfce4.spec
 DIST_SOURCES =
-DATA = $(noinst_DATA)
+DATA = $(noinst_DATA) $(pkginfo_DATA)
 
 
 RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
@@ -163,6 +167,24 @@ clean-libtool:
 distclean-libtool:
 	-rm -f libtool
 uninstall-info-am:
+pkginfoDATA_INSTALL = $(INSTALL_DATA)
+install-pkginfoDATA: $(pkginfo_DATA)
+	@$(NORMAL_INSTALL)
+	$(mkinstalldirs) $(DESTDIR)$(pkginfodir)
+	@list='$(pkginfo_DATA)'; for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  f="`echo $$p | sed -e 's|^.*/||'`"; \
+	  echo " $(pkginfoDATA_INSTALL) $$d$$p $(DESTDIR)$(pkginfodir)/$$f"; \
+	  $(pkginfoDATA_INSTALL) $$d$$p $(DESTDIR)$(pkginfodir)/$$f; \
+	done
+
+uninstall-pkginfoDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(pkginfo_DATA)'; for p in $$list; do \
+	  f="`echo $$p | sed -e 's|^.*/||'`"; \
+	  echo " rm -f $(DESTDIR)$(pkginfodir)/$$f"; \
+	  rm -f $(DESTDIR)$(pkginfodir)/$$f; \
+	done
 
 # This directory's subdirectories are mostly independent; you can cd
 # into them and run `make' without going through this Makefile.
@@ -366,6 +388,7 @@ check: check-recursive
 all-am: Makefile $(DATA) config.h
 installdirs: installdirs-recursive
 installdirs-am:
+	$(mkinstalldirs) $(DESTDIR)$(pkginfodir)
 
 install: install-recursive
 install-exec: install-exec-recursive
@@ -408,7 +431,7 @@ info: info-recursive
 
 info-am:
 
-install-data-am:
+install-data-am: install-pkginfoDATA
 
 install-exec-am:
 
@@ -427,7 +450,7 @@ mostlyclean: mostlyclean-recursive
 
 mostlyclean-am: mostlyclean-generic mostlyclean-libtool
 
-uninstall-am: uninstall-info-am
+uninstall-am: uninstall-info-am uninstall-pkginfoDATA
 
 uninstall-info: uninstall-info-recursive
 
@@ -440,13 +463,14 @@ uninstall-info: uninstall-info-recursive
 	install-data-am install-data-recursive install-exec \
 	install-exec-am install-exec-recursive install-info \
 	install-info-am install-info-recursive install-man \
-	install-recursive install-strip installcheck installcheck-am \
-	installdirs installdirs-am installdirs-recursive \
-	maintainer-clean maintainer-clean-generic \
+	install-pkginfoDATA install-recursive install-strip \
+	installcheck installcheck-am installdirs installdirs-am \
+	installdirs-recursive maintainer-clean maintainer-clean-generic \
 	maintainer-clean-recursive mostlyclean mostlyclean-generic \
 	mostlyclean-libtool mostlyclean-recursive tags tags-recursive \
 	uninstall uninstall-am uninstall-info-am \
-	uninstall-info-recursive uninstall-recursive
+	uninstall-info-recursive uninstall-pkginfoDATA \
+	uninstall-recursive
 
 @SET_MAKE@
 
