--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -5,6 +5,7 @@ callbacks.c \
 central.c \
 dialogs.c \
 icons.c \
+info.c \
 item.c \
 item_dialog.c \
 module.c \
@@ -34,5 +35,5 @@ xfce.h \
 xfce_support.h \
 global.h
 
-xfce4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DSYSCONFDIR=\"$(sysconfdir)\"
+xfce4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DSYSCONFDIR=\"$(sysconfdir)\" -DVERSION=\"@VERSION@\"
 xfce4_LDADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
