--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -97,6 +97,7 @@ callbacks.c \
 central.c \
 dialogs.c \
 icons.c \
+info.c \
 item.c \
 item_dialog.c \
 module.c \
@@ -128,7 +129,7 @@ xfce_support.h \
 global.h
 
 
-xfce4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DSYSCONFDIR=\"$(sysconfdir)\"
+xfce4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DSYSCONFDIR=\"$(sysconfdir)\" -DVERSION=\"@VERSION@\"
 xfce4_LDADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
 subdir = panel
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -139,7 +140,7 @@ PROGRAMS = $(bin_PROGRAMS)
 
 am_xfce4_OBJECTS = xfce4-builtins.$(OBJEXT) xfce4-callbacks.$(OBJEXT) \
 	xfce4-central.$(OBJEXT) xfce4-dialogs.$(OBJEXT) \
-	xfce4-icons.$(OBJEXT) xfce4-item.$(OBJEXT) \
+	xfce4-icons.$(OBJEXT) xfce4-info.$(OBJEXT) xfce4-item.$(OBJEXT) \
 	xfce4-item_dialog.$(OBJEXT) xfce4-module.$(OBJEXT) \
 	xfce4-move.$(OBJEXT) xfce4-popup.$(OBJEXT) \
 	xfce4-settings.$(OBJEXT) xfce4-side.$(OBJEXT) \
@@ -161,7 +162,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4-central.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4-dialogs.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4-icons.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/xfce4-item.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/xfce4-info.Po ./$(DEPDIR)/xfce4-item.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4-item_dialog.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4-module.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4-move.Po \
@@ -228,6 +229,7 @@ xfce4-callbacks.$(OBJEXT): callbacks.c
 xfce4-central.$(OBJEXT): central.c
 xfce4-dialogs.$(OBJEXT): dialogs.c
 xfce4-icons.$(OBJEXT): icons.c
+xfce4-info.$(OBJEXT): info.c
 xfce4-item.$(OBJEXT): item.c
 xfce4-item_dialog.$(OBJEXT): item_dialog.c
 xfce4-module.$(OBJEXT): module.c
@@ -253,6 +255,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4-central.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4-dialogs.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4-icons.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4-info.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4-item.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4-item_dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4-module.Po@am__quote@
@@ -374,6 +377,24 @@ xfce4-icons.lo: icons.c
 @AMDEP_TRUE@	depfile='$(DEPDIR)/xfce4-icons.Plo' tmpdepfile='$(DEPDIR)/xfce4-icons.TPlo' @AMDEPBACKSLASH@
 @AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_CFLAGS) $(CFLAGS) -c -o xfce4-icons.lo `test -f 'icons.c' || echo '$(srcdir)/'`icons.c
+
+xfce4-info.o: info.c
+@AMDEP_TRUE@	source='info.c' object='xfce4-info.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/xfce4-info.Po' tmpdepfile='$(DEPDIR)/xfce4-info.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_CFLAGS) $(CFLAGS) -c -o xfce4-info.o `test -f 'info.c' || echo '$(srcdir)/'`info.c
+
+xfce4-info.obj: info.c
+@AMDEP_TRUE@	source='info.c' object='xfce4-info.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/xfce4-info.Po' tmpdepfile='$(DEPDIR)/xfce4-info.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_CFLAGS) $(CFLAGS) -c -o xfce4-info.obj `cygpath -w info.c`
+
+xfce4-info.lo: info.c
+@AMDEP_TRUE@	source='info.c' object='xfce4-info.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/xfce4-info.Plo' tmpdepfile='$(DEPDIR)/xfce4-info.TPlo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_CFLAGS) $(CFLAGS) -c -o xfce4-info.lo `test -f 'info.c' || echo '$(srcdir)/'`info.c
 
 xfce4-item.o: item.c
 @AMDEP_TRUE@	source='item.c' object='xfce4-item.o' libtool=no @AMDEPBACKSLASH@
