--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -3,12 +3,14 @@ xfce4_SOURCES = \
 builtins.c \
 callbacks.c \
 central.c \
+controls.c \
+controls_dialog.c \
 dialogs.c \
+iconbutton.c \
 icons.c \
 info.c \
 item.c \
 item_dialog.c \
-module.c \
 move.c \
 popup.c \
 settings.c \
@@ -17,6 +19,7 @@ wmhints.c \
 builtins.h \
 callbacks.h \
 central.h \
+controls_dialog.h \
 dialogs.h \
 item_dialog.h \
 move.h \
@@ -28,9 +31,10 @@ xfce.c \
 xfce_support.c
 
 pkginclude_HEADERS = \
+iconbutton.h \
 icons.h \
 item.h \
-module.h \
+controls.h \
 xfce.h \
 xfce_support.h \
 global.h
