--- a/Makefile.in
+++ b/Makefile.in
@@ -114,9 +114,9 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
 DIST_COMMON = README AUTHORS COPYING ChangeLog INSTALL Makefile.am \
-	Makefile.in NEWS aclocal.m4 compile config.guess config.h.in \
-	config.sub configure configure.ac depcomp install-sh ltmain.sh \
-	missing mkinstalldirs xfce4.spec.in
+	Makefile.in NEWS TODO aclocal.m4 compile config.guess \
+	config.h.in config.sub configure configure.ac depcomp \
+	install-sh ltmain.sh missing mkinstalldirs xfce4.spec.in
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
