--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -121,7 +121,8 @@ trash_empty.xpm \
 trash_full.xpm \
 unknown.xpm \
 up.xpm \
-xfce_icon.xpm
+xfce_icon.xpm \
+xfce_slogan.xpm
 
 
 EXTRA_DIST = $(noinst_DATA)
