update ChangeLog and Makefile.am
(Old svn revision: 3303)

--- a/Makefile.in
+++ b/Makefile.in
@@ -97,7 +97,7 @@ pkginfo_DATA = AUTHORS COPYING ChangeLog
 
 noinst_DATA = example.xfce4rc
 
-EXTRA_DIST = example.xfce4rc.in xfce4.spec xfce4.spec.in README.xml
+EXTRA_DIST = example.xfce4rc.in xfce4.spec xfce4.spec.in 
 
 SUBDIRS = @MY_SUBDIRS@
 subdir = .
