--- a/xfce4.spec.in
+++ b/xfce4.spec.in
@@ -53,7 +53,7 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root)
-%doc example.xfce4rc README README.xml ChangeLog NEWS INSTALL COPYING AUTHORS
+%doc example.xfce4rc README TODO ChangeLog NEWS INSTALL COPYING AUTHORS
 %{_bindir}/*
 
 %files themes
