Fix panel reorientation
(Old svn revision: 3329)

--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -122,7 +122,8 @@ trash_full.xpm \
 unknown.xpm \
 up.xpm \
 xfce_icon.xpm \
-xfce_slogan.xpm
+xfce_slogan.xpm \
+digits.xbm
 
 
 EXTRA_DIST = $(noinst_DATA)
