--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -30,6 +30,7 @@ trash_full.xpm \
 unknown.xpm \
 up.xpm \
 xfce_icon.xpm \
-xfce_slogan.xpm
+xfce_slogan.xpm \
+digits.xbm
 
 EXTRA_DIST = $(noinst_DATA)
