--- a/Makefile.in
+++ b/Makefile.in
@@ -475,7 +475,7 @@ uninstall-info: uninstall-info-recursive
 @SET_MAKE@
 
 distclean-local:
-	rm -f example.xfce4rc xfce4.spec
+	rm -rf example.xfce4rc xfce4.spec *.cache
 
 example.xfce4rc:
 	@sed -e "s%_pkgdatadir_%$(pkgdatadir)%g" example.xfce4rc.in > example.xfce4rc
