Err, forgot to remove the digits.xbm files from the Makefile.am !
(Old svn revision: 3366)

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -30,7 +30,5 @@ trash_full.xpm \
 unknown.xpm \
 up.xpm \
 xfce_icon.xpm \
-xfce_slogan.xpm \
-digits.xbm
-
+xfce_slogan.xpm
 EXTRA_DIST = $(noinst_DATA)
