--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -122,9 +122,7 @@ trash_full.xpm \
 unknown.xpm \
 up.xpm \
 xfce_icon.xpm \
-xfce_slogan.xpm \
-digits.xbm
-
+xfce_slogan.xpm
 
 EXTRA_DIST = $(noinst_DATA)
 subdir = icons
