--- a/themes/Makefile.in
+++ b/themes/Makefile.in
@@ -91,7 +91,8 @@ am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
 SUBDIRS = \
-Gnome
+Gnome \
+Bluecurve
 
 subdir = themes
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
