--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -39,6 +39,7 @@ item.h \
 controls.h \
 xfce.h \
 xfce_support.h \
+debug.h \
 global.h
 
 xfce4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DSYSCONFDIR=\"$(sysconfdir)\" -DVERSION=\"@VERSION@\"
